<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:layout_gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/Addusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="16dp"/>
        <AutoCompleteTextView
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/newcreateaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>