<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:layout_gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
    <AutoCompleteTextView
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="or"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_slab_bold"/>

    <Button
        android:id="@+id/createaccountbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:textSize="19sp"
        android:background="@android:color/transparent"/>
        <ProgressBar
            android:id="@+id/loginprogressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>