<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:background="@drawable/gradient_bg"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:background="@color/centerColor"
        android:alpha="0.7"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:gravity="end"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/row_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:text="@string/username"
            android:textSize="18sp"/>
        <ImageButton
            android:id="@+id/row_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_share"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/row_backgorund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/one_image"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:cropToPadding="true" />
        <TextView
            android:id="@+id/row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="19sp"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/row_thought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_thoughts"
            android:textSize="19sp"
            android:padding="10dp"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/row_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="19sp"
            android:padding="10dp"
            android:textStyle="italic"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>