<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="@string/self_gratitude_journal"
        android:textSize="24sp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_so_grateful_your_about_today"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:id="@+id/getStartedbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="19sp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"/>
</LinearLayout>