<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/background_view"
        android:layout_width="390dp"
        android:layout_height="319dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:alpha="0.9"
        android:src="@drawable/one_image"/>

    <TextView
        android:id="@+id/post_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="50.5"
        app:layout_constraintTop_toBottomOf="@+id/camera_view" />

    <TextView
        android:id="@+id/post_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_name_view"
        app:layout_constraintVertical_bias="0.315" />

    <ImageView
        android:id="@+id/camera_view"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_view"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="389dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title"
        android:padding="10dp"
        android:textSize="19sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@drawable/input_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_view"
        android:autofillHints="" />

    <EditText
        android:id="@+id/post_journal_text"
        android:layout_width="394dp"
        android:layout_height="141dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/your_thoughts"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="389dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_journal_text" />
</androidx.constraintlayout.widget.ConstraintLayout>